--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,100 +6,18 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 34.221.93.113
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id002
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: mizban.arzonhost.ir
-    port: 2086
-    cipher: auto
-    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mizban.arzonhost.ir
-  - &id003
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: ss
-    server: 46.226.162.112
-    port: 32913
-    password: KTwIQM1cQJwtkrjfld6Usn
-    cipher: chacha20-ietf-poly1305
-  - &id004
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
-    type: vmess
-    server: admin.arzonhost.ir
-    port: 2086
-    cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
-  - &id005
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
     type: trojan
-    server: 23.142.200.175
+    server: 172.67.204.84
     port: 443
     udp: true
-    password: 27876_t7d7f4e3f
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
     skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
-    type: vmess
-    server: 104.21.4.14
-    port: 2086
-    cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
-  - &id007
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
-    type: vmess
-    server: 172.67.223.242
-    port: 2086
-    cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
-  - &id008
-    name: 🇱🇺_LU_卢森堡
-    type: vmess
-    server: 78.111.102.232
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id009
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id002
     name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
     type: vmess
     server: tu.mahilu.site
@@ -114,7 +32,7 @@ proxies:
       path: /
       headers:
         host: tu.mahilu.site
-  - &id010
+  - &id003
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -129,46 +47,94 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id011
-    name: 🇺🇸_US_美国_3
+  - &id004
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
-    server: 64.64.229.96
-    port: 80
+    server: mizban.arzonhost.ir
+    port: 2086
     cipher: auto
-    uuid: 88816e0c-db97-486c-9029-9693d14e4c34
+    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-  - &id012
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: trojan
-    server: 185.236.233.111
-    port: 2053
-    udp: true
-    password: ba74833c-8c0f-4dcd-8cbc-13e3c32d3765
-    sni: ftp.debian.org
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇺🇸_US_美国_4
+      headers:
+        host: mizban.arzonhost.ir
+  - &id005
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
     type: vmess
-    server: yh1.freeh1.xyz
-    port: 8080
+    server: cdn.vds-server.ir
+    port: 8880
     cipher: auto
-    uuid: ef8c954e-014f-4b36-8273-9b5086afab34
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
+      path: /
       headers:
-        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
-  - &id014
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_4
+        host: cdn.vds-server.ir
+  - &id006
+    name: 🇱🇺_LU_卢森堡
+    type: vmess
+    server: 78.111.102.232
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id007
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: us-phoenix-oracle-3e4543.ip1.shop
+    port: 46666
+    cipher: auto
+    uuid: f0f067fe-8e6d-4d95-816b-601038fd5876
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /rongseven?ed=2048
+      headers:
+        host: us-phoenix-oracle-3e4543.ip1.shop
+  - &id008
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id009
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    type: vmess
+    server: admin.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: admin.arzonhost.ir
+  - &id010
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
     type: vmess
     server: 172.67.130.140
     port: 2082
@@ -182,8 +148,8 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id015
-    name: 🇺🇸_US_美国_5
+  - &id011
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: 172.67.116.48
     port: 80
@@ -197,33 +163,78 @@ proxies:
       path: /
       headers:
         host: wap.hostmjj.com
-  - &id016
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+  - &id012
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 202.91.34.222
+    port: 16899
+    password: Yc2CtrIz8L
+    cipher: aes-128-gcm
+  - &id013
+    name: 🇬🇮_GI_直布罗陀
+    type: trojan
+    server: 95.164.68.116
+    port: 2053
+    udp: true
+    password: f37a931d-7092-48fe-b82f-a98da3040eb2
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_4
     type: vmess
-    server: yh3.freeh1.xyz
-    port: 8080
+    server: 104.21.4.14
+    port: 2086
     cipher: auto
-    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      path: /
       headers:
-        host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id017
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
+        host: admin.arzonhost.ir
+  - &id015
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_5
+    type: vmess
+    server: 172.67.223.242
+    port: 2086
+    cipher: auto
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: admin.arzonhost.ir
+  - &id016
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_6
+    type: vmess
+    server: 104.21.8.157
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id017
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 5.161.192.172
+    port: 33764
+    cipher: auto
+    uuid: f96e9397-08be-4227-e26a-f3a55a3976de
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
