--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,6 +6,21 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    type: vmess
+    server: 104.21.4.14
+    port: 2086
+    cipher: auto
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: admin.arzonhost.ir
+  - &id002
     name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
     type: trojan
     server: 172.67.204.84
@@ -17,7 +32,52 @@ proxies:
     network: grpc
     grpc-opts:
       grpc-service-name: 443trojan
-  - &id002
+  - &id003
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    type: vmess
+    server: 172.67.223.242
+    port: 2086
+    cipher: auto
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: admin.arzonhost.ir
+  - &id004
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    type: vmess
+    server: admin.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: admin.arzonhost.ir
+  - &id005
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: mizban.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mizban.arzonhost.ir
+  - &id006
     name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
     type: vmess
     server: tu.mahilu.site
@@ -32,38 +92,8 @@ proxies:
       path: /
       headers:
         host: tu.mahilu.site
-  - &id003
-    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
-    type: vmess
-    server: 94.140.0.110
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: food.zhaal.ir
-  - &id004
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: mizban.arzonhost.ir
-    port: 2086
-    cipher: auto
-    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mizban.arzonhost.ir
-  - &id005
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+  - &id007
+    name: 🇺🇸_US_美国_1
     type: vmess
     server: cdn.vds-server.ir
     port: 8880
@@ -77,39 +107,13 @@ proxies:
       path: /
       headers:
         host: cdn.vds-server.ir
-  - &id006
-    name: 🇱🇺_LU_卢森堡
-    type: vmess
-    server: 78.111.102.232
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id007
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: us-phoenix-oracle-3e4543.ip1.shop
-    port: 46666
-    cipher: auto
-    uuid: f0f067fe-8e6d-4d95-816b-601038fd5876
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /rongseven?ed=2048
-      headers:
-        host: us-phoenix-oracle-3e4543.ip1.shop
   - &id008
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    name: 🇦🇪_AE_阿联酋
     type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
+    server: 94.140.0.110
+    port: 8880
     cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -117,100 +121,31 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: s1c.v2.v001sss.xyz
+        host: food.zhaal.ir
   - &id009
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
-    type: vmess
-    server: admin.arzonhost.ir
-    port: 2086
-    cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
-  - &id010
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
-    type: vmess
-    server: 172.67.130.140
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id011
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 172.67.116.48
-    port: 80
+    server: 38.147.160.101
+    port: 28241
     cipher: auto
-    uuid: 22a13aa2-4854-44cb-e090-ec71ab84b1ff
+    uuid: adf0d7fc-6c13-4cff-e02a-e130cf562c6f
     alterId: 0
     tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wap.hostmjj.com
-  - &id012
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 202.91.34.222
-    port: 16899
-    password: Yc2CtrIz8L
-    cipher: aes-128-gcm
-  - &id013
-    name: 🇬🇮_GI_直布罗陀
-    type: trojan
-    server: 95.164.68.116
-    port: 2053
-    udp: true
-    password: f37a931d-7092-48fe-b82f-a98da3040eb2
     skip-cert-verify: true
     network: tcp
-  - &id014
+  - &id010
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 38.147.160.101
+    port: 41384
+    cipher: auto
+    uuid: ab6643ec-5172-4a7b-b0e0-f2767bae83aa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id011
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_4
-    type: vmess
-    server: 104.21.4.14
-    port: 2086
-    cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
-  - &id015
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_5
-    type: vmess
-    server: 172.67.223.242
-    port: 2086
-    cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
-  - &id016
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_6
     type: vmess
     server: 104.21.8.157
     port: 2082
@@ -224,15 +159,13 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id017
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 5.161.192.172
-    port: 33764
-    cipher: auto
-    uuid: f96e9397-08be-4227-e26a-f3a55a3976de
-    alterId: 0
-    tls: false
+  - &id012
+    name: 🇬🇮_GI_直布罗陀
+    type: trojan
+    server: 95.164.68.116
+    port: 2053
+    udp: true
+    password: f37a931d-7092-48fe-b82f-a98da3040eb2
     skip-cert-verify: true
     network: tcp
 proxy-groups:
@@ -273,11 +206,6 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -295,11 +223,6 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
   - name: SELECT
     type: select
     proxies:
@@ -315,11 +238,6 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
