--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,12 +6,22 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_1
+    type: trojan
+    server: gcdddd0005.likeone.lol
+    port: 53279
+    udp: true
+    password: 575bc4d8-e9e0-48d4-9286-f922c17b35fc
+    sni: de01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id002
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
-    server: 104.21.4.14
+    server: mizban.arzonhost.ir
     port: 2086
     cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -19,21 +29,9 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: admin.arzonhost.ir
-  - &id002
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
+        host: mizban.arzonhost.ir
   - &id003
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 172.67.223.242
     port: 2086
@@ -48,7 +46,37 @@ proxies:
       headers:
         host: admin.arzonhost.ir
   - &id004
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: trojan
+    server: gcdddd0001.likeone.lol
+    port: 26094
+    udp: true
+    password: 575bc4d8-e9e0-48d4-9286-f922c17b35fc
+    sni: id01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_2
+    type: trojan
+    server: gcdddd0001.likeone.lol
+    port: 53279
+    udp: true
+    password: 575bc4d8-e9e0-48d4-9286-f922c17b35fc
+    sni: de01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
+    type: trojan
+    server: gcdddd0005.likeone.lol
+    port: 60293
+    udp: true
+    password: 575bc4d8-e9e0-48d4-9286-f922c17b35fc
+    sni: tur01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
     server: admin.arzonhost.ir
     port: 2086
@@ -62,13 +90,13 @@ proxies:
       path: /
       headers:
         host: admin.arzonhost.ir
-  - &id005
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+  - &id008
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
     type: vmess
-    server: mizban.arzonhost.ir
+    server: 104.21.4.14
     port: 2086
     cipher: auto
-    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -76,8 +104,8 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mizban.arzonhost.ir
-  - &id006
+        host: admin.arzonhost.ir
+  - &id009
     name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
     type: vmess
     server: tu.mahilu.site
@@ -92,8 +120,8 @@ proxies:
       path: /
       headers:
         host: tu.mahilu.site
-  - &id007
-    name: 🇺🇸_US_美国_1
+  - &id010
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
     type: vmess
     server: cdn.vds-server.ir
     port: 8880
@@ -107,8 +135,8 @@ proxies:
       path: /
       headers:
         host: cdn.vds-server.ir
-  - &id008
-    name: 🇦🇪_AE_阿联酋
+  - &id011
+    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
     port: 8880
@@ -122,32 +150,25 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id009
-    name: 🇺🇸_US_美国_2
+  - &id012
+    name: 🇺🇸_US_美国
     type: vmess
-    server: 38.147.160.101
-    port: 28241
+    server: us-phoenix-oracle-3e4543.ip1.shop
+    port: 46666
     cipher: auto
-    uuid: adf0d7fc-6c13-4cff-e02a-e130cf562c6f
+    uuid: f0f067fe-8e6d-4d95-816b-601038fd5876
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 38.147.160.101
-    port: 41384
-    cipher: auto
-    uuid: ab6643ec-5172-4a7b-b0e0-f2767bae83aa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id011
+    network: ws
+    ws-opts:
+      path: /rongseven?ed=2048
+      headers:
+        host: us-phoenix-oracle-3e4543.ip1.shop
+  - &id013
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_4
     type: vmess
-    server: 104.21.8.157
+    server: 172.67.130.140
     port: 2082
     cipher: auto
     uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
@@ -159,15 +180,21 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id012
-    name: 🇬🇮_GI_直布罗陀
-    type: trojan
-    server: 95.164.68.116
-    port: 2053
-    udp: true
-    password: f37a931d-7092-48fe-b82f-a98da3040eb2
+  - &id014
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_5
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -206,6 +233,8 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -223,6 +252,8 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
   - name: SELECT
     type: select
     proxies:
@@ -238,6 +269,8 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
