--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,31 +6,20 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_1
-    type: trojan
-    server: gcdddd0005.likeone.lol
-    port: 53279
-    udp: true
-    password: 575bc4d8-e9e0-48d4-9286-f922c17b35fc
-    sni: de01.ckcloud.info
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: mizban.arzonhost.ir
-    port: 2086
+    server: api.cdn-tgju.org
+    port: 2087
     cipher: auto
-    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
+    uuid: 13fc87d3-43c6-4cc1-9ab9-523d9707a113
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
+    servername: api.cdn-tgju.org
     network: ws
     ws-opts:
-      path: /
-      headers:
-        host: mizban.arzonhost.ir
-  - &id003
+      path: /ows
+  - &id002
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 172.67.223.242
@@ -45,53 +34,8 @@ proxies:
       path: /
       headers:
         host: admin.arzonhost.ir
-  - &id004
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: trojan
-    server: gcdddd0001.likeone.lol
-    port: 26094
-    udp: true
-    password: 575bc4d8-e9e0-48d4-9286-f922c17b35fc
-    sni: id01.ckcloud.info
-    skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_2
-    type: trojan
-    server: gcdddd0001.likeone.lol
-    port: 53279
-    udp: true
-    password: 575bc4d8-e9e0-48d4-9286-f922c17b35fc
-    sni: de01.ckcloud.info
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
-    type: trojan
-    server: gcdddd0005.likeone.lol
-    port: 60293
-    udp: true
-    password: 575bc4d8-e9e0-48d4-9286-f922c17b35fc
-    sni: tur01.ckcloud.info
-    skip-cert-verify: true
-    network: tcp
-  - &id007
+  - &id003
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
-    type: vmess
-    server: admin.arzonhost.ir
-    port: 2086
-    cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
-  - &id008
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
     type: vmess
     server: 104.21.4.14
     port: 2086
@@ -105,37 +49,7 @@ proxies:
       path: /
       headers:
         host: admin.arzonhost.ir
-  - &id009
-    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
-    type: vmess
-    server: tu.mahilu.site
-    port: 2095
-    cipher: auto
-    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tu.mahilu.site
-  - &id010
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: cdn.vds-server.ir
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: cdn.vds-server.ir
-  - &id011
+  - &id004
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -150,28 +64,43 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id012
-    name: 🇺🇸_US_美国
+  - &id005
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: us-phoenix-oracle-3e4543.ip1.shop
-    port: 46666
+    server: cfcdn1.sanfencdn9.com
+    port: 2095
     cipher: auto
-    uuid: f0f067fe-8e6d-4d95-816b-601038fd5876
+    uuid: 474413f9-3c15-493f-88b2-50e0c4702dde
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /rongseven?ed=2048
+      path: /video/qYZue4zaWS
       headers:
-        host: us-phoenix-oracle-3e4543.ip1.shop
-  - &id013
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_4
+        host: us82pRzxDMb.fzbqfrse.xyz
+  - &id006
+    name: 🇪🇸_ES_西班牙->🇺🇸_US_美国
     type: vmess
-    server: 172.67.130.140
-    port: 2082
+    server: 185.214.103.249
+    port: 8002
+    cipher: chacha20-poly1305
+    uuid: b00c57f5-3f8f-38e7-b269-6ca1dea41096
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /db00
+      headers:
+        host: cache-2.cn-db.top
+  - &id007
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    type: vmess
+    server: admin.arzonhost.ir
+    port: 2086
     cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -179,9 +108,24 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: s1c.v2.v001sss.xyz
-  - &id014
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_5
+        host: admin.arzonhost.ir
+  - &id008
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    type: vmess
+    server: cdn.vds-server.ir
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cdn.vds-server.ir
+  - &id009
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_4
     type: vmess
     server: s1c.v2.v001sss.xyz
     port: 2082
@@ -195,6 +139,103 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
+  - &id010
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_5
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id011
+    name: 🇱🇺_LU_卢森堡
+    type: vmess
+    server: 78.111.102.232
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id012
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_6
+    type: vmess
+    server: 104.21.8.157
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id013
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+    type: vmess
+    server: mizban.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mizban.arzonhost.ir
+  - &id014
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id015
+    name: 🇩🇪_DE_德国
+    type: ss
+    server: 80.92.204.106
+    port: 9094
+    password: rpgbNnU9rDDU4aWZ
+    cipher: aes-256-cfb
+  - &id016
+    name: 🇳🇱_NL_荷兰
+    type: ss
+    server: 88.210.6.98
+    port: 60869
+    password: lPT3Mi25IXYP3iWzPJaryQ
+    cipher: chacha20-ietf-poly1305
+  - &id017
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 104.18.135.91
+    port: 2095
+    cipher: auto
+    uuid: 474413f9-3c15-493f-88b2-50e0c4702dde
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/qYZue4zaWS
+      headers:
+        host: us82pRzxDMb.fzbqfrse.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -235,6 +276,9 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
+      - *id016
+      - *id017
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -254,6 +298,9 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
+      - *id016
+      - *id017
   - name: SELECT
     type: select
     proxies:
@@ -271,6 +318,9 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
+      - *id016
+      - *id017
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
