--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,51 +6,29 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国_1
     type: vmess
-    server: admin.arzonhost.ir
-    port: 2086
+    server: 7569erzy.of08zo0-et55lpt-uk01.my777999.top
+    port: 41999
     cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    uuid: 22212159-1be2-4c81-afbb-6203b6a51739
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
+    network: tcp
   - &id002
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国_2
     type: vmess
-    server: 104.21.4.14
-    port: 2086
+    server: 112.16.228.112
+    port: 41999
     cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    uuid: 22212159-1be2-4c81-afbb-6203b6a51739
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
+    network: tcp
   - &id003
-    name: 🇧🇷_BR_巴西
-    type: ss
-    server: 144.22.161.16
-    port: 7703
-    password: 9c0315a0-3182-4dfe-bb38-5cc1fa2a7859
-    cipher: aes-256-gcm
-  - &id004
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 167.88.61.159
-    port: 5499
-    password: lGqs95QkFHo2NV
-    cipher: aes-256-gcm
-  - &id005
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 172.67.223.242
     port: 2086
@@ -64,36 +42,13 @@ proxies:
       path: /
       headers:
         host: admin.arzonhost.ir
-  - &id006
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id007
-    name: 🇱🇺_LU_卢森堡
+  - &id004
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
-    server: 78.111.102.232
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id008
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: mizban.arzonhost.ir
+    server: admin.arzonhost.ir
     port: 2086
     cipher: auto
-    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -101,8 +56,38 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mizban.arzonhost.ir
-  - &id009
+        host: admin.arzonhost.ir
+  - &id005
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
+    type: vmess
+    server: tu.mahilu.site
+    port: 2095
+    cipher: auto
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tu.mahilu.site
+  - &id006
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    type: vmess
+    server: 104.21.4.14
+    port: 2086
+    cipher: auto
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: admin.arzonhost.ir
+  - &id007
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -117,13 +102,13 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id010
-    name: 🇺🇸_US_美国_2
+  - &id008
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
-    server: onea.flha.ru
-    port: 2095
+    server: cdn.vds-server.ir
+    port: 8880
     cipher: auto
-    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -131,35 +116,39 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: onea.flha.ru
+        host: cdn.vds-server.ir
+  - &id009
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+    type: vmess
+    server: mizban.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mizban.arzonhost.ir
+  - &id010
+    name: 🇺🇸_US_美国
+    type: vmess
+    server: us219.netfilx.live
+    port: 80
+    cipher: auto
+    uuid: 1e65ec6d-9a42-4cd0-8c51-63030970134f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us219.netfilx.live
   - &id011
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 35.87.25.21
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: 23.142.200.175
-    port: 443
-    udp: true
-    password: 27876_t7d7f4e3f
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: ru01.freeflyingcloud.xyz
-    port: 30002
-    udp: true
-    password: 99c36038-8c1f-44cb-8463-c9c555e80b58
-    sni: ru01.freeflyingcloud.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇨🇦_CA_加拿大
+    name: 🇨🇦_CA_加拿大_1
     type: vmess
     server: 108.181.23.161
     port: 8080
@@ -171,8 +160,35 @@ proxies:
     network: ws
     ws-opts:
       path: /1IKYjV0r/
-      headers:
-        host: internet.life.com.by
+  - &id012
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id013
+    name: 🇨🇦_CA_加拿大_2
+    type: trojan
+    server: 15.156.10.77
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trojan.burgerip.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇫🇮_FI_芬兰
+    type: ss
+    server: 95.217.181.48
+    port: 443
+    password: Telegram-AlfredConfig-13
+    cipher: chacha20-ietf-poly1305
 proxy-groups:
   - name: PROXY
     type: select
