--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -36,34 +36,6 @@ proxies:
       headers:
         host: admin.arzonhost.ir
   - &id003
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: mizban.arzonhost.ir
-    port: 2086
-    cipher: auto
-    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mizban.arzonhost.ir
-  - &id004
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 158.51.123.111
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /linkvws
-  - &id005
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
     type: vmess
     server: admin.arzonhost.ir
@@ -78,13 +50,40 @@ proxies:
       path: /
       headers:
         host: admin.arzonhost.ir
-  - &id006
-    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
+  - &id004
+    name: 🇺🇸_US_美国_1
+    type: trojan
+    server: 104.21.69.44
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id005
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 94.140.0.110
-    port: 8880
+    server: 103.182.97.156
+    port: 45979
     cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    uuid: 23bdf6df-c482-46d0-c0f4-5a98d534ea11
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /test
+      headers:
+        host: 103.182.97.156
+  - &id006
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    type: vmess
+    server: mizban.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -92,9 +91,9 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: food.zhaal.ir
+        host: mizban.arzonhost.ir
   - &id007
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_4
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
     type: vmess
     server: cdn.vds-server.ir
     port: 8880
@@ -109,13 +108,75 @@ proxies:
       headers:
         host: cdn.vds-server.ir
   - &id008
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 75.102.51.45
-    port: 16899
-    password: Yc2CtrIz8L
-    cipher: aes-128-gcm
+    name: 🇿🇦_ZA_南非
+    type: vmess
+    server: 129.151.164.152
+    port: 55600
+    cipher: auto
+    uuid: e30f8588-2555-48b8-c354-c8e63f57232d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
   - &id009
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: whatismyipaddress.com
+    port: 80
+    cipher: auto
+    uuid: e94a39b6-0dc9-4f71-8df8-4b985aecb195
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: usvmqlsgf1ljbtzjun8.lovemianfei.store
+  - &id010
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id011
+    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
+    type: vmess
+    server: 94.140.0.110
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: food.zhaal.ir
+  - &id012
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: 95.164.33.62
+    port: 443
+    udp: true
+    password: 0b1371aa-649d-41dc-9126-338c87936500
+    sni: sourceforge.net
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /websocket
+      headers:
+        host: se1.trojanvpn.de
+  - &id013
     name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
     type: vmess
     server: tu.mahilu.site
@@ -130,8 +191,73 @@ proxies:
       path: /
       headers:
         host: tu.mahilu.site
-  - &id010
-    name: 🇺🇸_US_美国_3
+  - &id014
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: us3.rcidc.shop
+    port: 443
+    cipher: auto
+    uuid: 80235a8a-60d7-472e-b456-0b5f5eaa3c0c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+  - &id015
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: us6.rcidc.shop
+    port: 443
+    cipher: auto
+    uuid: 80235a8a-60d7-472e-b456-0b5f5eaa3c0c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+  - &id016
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 38.12.30.248
+    port: 443
+    cipher: auto
+    uuid: 80235a8a-60d7-472e-b456-0b5f5eaa3c0c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+  - &id017
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: us4.rcidc.shop
+    port: 443
+    cipher: auto
+    uuid: 80235a8a-60d7-472e-b456-0b5f5eaa3c0c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+  - &id018
+    name: 🇵🇰_PK_巴基斯坦
+    type: vmess
+    server: 50.114.243.61
+    port: 43834
+    cipher: auto
+    uuid: b246e34d-bbd1-4016-8f74-ea461c37e411
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 63.33.143.12
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.burgerip.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇺🇸_US_美国_9
     type: vmess
     server: us219.netfilx.live
     port: 80
@@ -145,79 +271,6 @@ proxies:
       path: /
       headers:
         host: us219.netfilx.live
-  - &id011
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_1
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id012
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_2
-    type: trojan
-    server: 104.21.69.44
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id013
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: 23.142.200.175
-    port: 443
-    udp: true
-    password: 27876_t7d7f4e3f
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: 95.164.33.62
-    port: 443
-    udp: true
-    password: 0b1371aa-649d-41dc-9126-338c87936500
-    sni: sourceforge.net
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /websocket
-      headers:
-        host: se1.trojanvpn.de
-  - &id015
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: channel.hopev2ray.link
-    port: 443
-    cipher: auto
-    uuid: 9aaceca0-bc5b-49e6-a83f-088e14d94434
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: no1-vmess.sshmax.xyz
-  - &id016
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
-    type: vmess
-    server: 183.240.179.207
-    port: 30112
-    cipher: auto
-    uuid: e456d54e-fb49-42c2-ace7-0dd141fee5a6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -260,6 +313,10 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -281,6 +338,10 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
   - name: SELECT
     type: select
     proxies:
@@ -300,6 +361,10 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
