--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -63,21 +63,98 @@ proxies:
     grpc-opts:
       grpc-service-name: 443trojan
   - &id005
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id006
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
     type: vmess
-    server: 103.182.97.156
-    port: 45979
+    server: 104.19.58.60
+    port: 8080
     cipher: auto
-    uuid: 23bdf6df-c482-46d0-c0f4-5a98d534ea11
+    uuid: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96
     alterId: 0
     tls: false
     skip-cert-verify: true
+    servername: concentrations-taxi-about-recognised.trycloudflare.com
     network: ws
     ws-opts:
-      path: /test
+      path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
       headers:
-        host: 103.182.97.156
-  - &id006
+        host: concentrations-taxi-about-recognised.trycloudflare.com
+  - &id007
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: 104.20.26.40
+    port: 8080
+    cipher: auto
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: fantastic-doe-bids-ended.trycloudflare.com
+    network: ws
+    ws-opts:
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      headers:
+        host: fantastic-doe-bids-ended.trycloudflare.com
+  - &id008
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+    type: vmess
+    server: yh7.dtku41.xyz
+    port: 8080
+    cipher: auto
+    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: booty-pensions-scheduling-blogging.trycloudflare.com
+    network: ws
+    ws-opts:
+      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
+      headers:
+        host: booty-pensions-scheduling-blogging.trycloudflare.com
+  - &id009
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+    type: vmess
+    server: yh5.dtku41.xyz
+    port: 8080
+    cipher: auto
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: fantastic-doe-bids-ended.trycloudflare.com
+    network: ws
+    ws-opts:
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      headers:
+        host: fantastic-doe-bids-ended.trycloudflare.com
+  - &id010
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+    type: vmess
+    server: yh4.dtku41.xyz
+    port: 8080
+    cipher: auto
+    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: booty-pensions-scheduling-blogging.trycloudflare.com
+    network: ws
+    ws-opts:
+      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
+      headers:
+        host: booty-pensions-scheduling-blogging.trycloudflare.com
+  - &id011
     name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
     server: mizban.arzonhost.ir
@@ -92,91 +169,7 @@ proxies:
       path: /
       headers:
         host: mizban.arzonhost.ir
-  - &id007
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: cdn.vds-server.ir
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: cdn.vds-server.ir
-  - &id008
-    name: 🇿🇦_ZA_南非
-    type: vmess
-    server: 129.151.164.152
-    port: 55600
-    cipher: auto
-    uuid: e30f8588-2555-48b8-c354-c8e63f57232d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id009
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: whatismyipaddress.com
-    port: 80
-    cipher: auto
-    uuid: e94a39b6-0dc9-4f71-8df8-4b985aecb195
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: usvmqlsgf1ljbtzjun8.lovemianfei.store
-  - &id010
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id011
-    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
-    type: vmess
-    server: 94.140.0.110
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: food.zhaal.ir
   - &id012
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: 95.164.33.62
-    port: 443
-    udp: true
-    password: 0b1371aa-649d-41dc-9126-338c87936500
-    sni: sourceforge.net
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /websocket
-      headers:
-        host: se1.trojanvpn.de
-  - &id013
     name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
     type: vmess
     server: tu.mahilu.site
@@ -191,73 +184,106 @@ proxies:
       path: /
       headers:
         host: tu.mahilu.site
-  - &id014
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: us3.rcidc.shop
+  - &id013
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: 95.164.33.62
     port: 443
+    udp: true
+    password: 0b1371aa-649d-41dc-9126-338c87936500
+    sni: sourceforge.net
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /websocket
+  - &id014
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: cdn.vds-server.ir
+    port: 8880
     cipher: auto
-    uuid: 80235a8a-60d7-472e-b456-0b5f5eaa3c0c
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cdn.vds-server.ir
   - &id015
+    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
+    type: vmess
+    server: 94.140.0.110
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: food.zhaal.ir
+  - &id016
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 38.68.134.9
+    port: 8008
+    password: XKFKl2rULjIp74
+    cipher: aes-256-gcm
+  - &id017
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 38.68.134.9
+    port: 5003
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id018
     name: 🇺🇸_US_美国_6
     type: vmess
-    server: us6.rcidc.shop
-    port: 443
+    server: 104.17.17.103
+    port: 8080
     cipher: auto
-    uuid: 80235a8a-60d7-472e-b456-0b5f5eaa3c0c
+    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
-  - &id016
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 38.12.30.248
-    port: 443
-    cipher: auto
-    uuid: 80235a8a-60d7-472e-b456-0b5f5eaa3c0c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-  - &id017
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: us4.rcidc.shop
-    port: 443
-    cipher: auto
-    uuid: 80235a8a-60d7-472e-b456-0b5f5eaa3c0c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-  - &id018
-    name: 🇵🇰_PK_巴基斯坦
-    type: vmess
-    server: 50.114.243.61
-    port: 43834
-    cipher: auto
-    uuid: b246e34d-bbd1-4016-8f74-ea461c37e411
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
+    ws-opts:
+      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
+      headers:
+        host: booty-pensions-scheduling-blogging.trycloudflare.com
   - &id019
-    name: 🇮🇪_IE_爱尔兰
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+    type: vmess
+    server: 104.21.19.202
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cdn.vds-server.ir
+  - &id020
+    name: 🇨🇦_CA_加拿大
     type: trojan
-    server: 63.33.143.12
+    server: 3.98.195.197
     port: 22222
     udp: true
-    password: telegram-id-privatevpns
+    password: telegram-id-directvpn
     sni: trojan.burgerip.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id020
-    name: 🇺🇸_US_美国_9
+    alpn:
+      - http/1.1
+  - &id021
+    name: 🇺🇸_US_美国_7
     type: vmess
     server: us219.netfilx.live
     port: 80
@@ -271,6 +297,36 @@ proxies:
       path: /
       headers:
         host: us219.netfilx.live
+  - &id022
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 104.19.40.48
+    port: 8880
+    cipher: auto
+    uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /d/65dd503.TG.WangCai2.WangCai_8:107690
+      headers:
+        host: uk.moss.network
+  - &id023
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
+    type: vmess
+    server: 104.19.40.99
+    port: 8880
+    cipher: auto
+    uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /d/65dd503.TG.WangCai2.WangCai_8:107690
+      headers:
+        host: uk.moss.network
 proxy-groups:
   - name: PROXY
     type: select
@@ -317,6 +373,9 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
+      - *id021
+      - *id022
+      - *id023
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -342,6 +401,9 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
+      - *id021
+      - *id022
+      - *id023
   - name: SELECT
     type: select
     proxies:
@@ -365,6 +427,9 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
+      - *id021
+      - *id022
+      - *id023
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
